# android_vendor_qcom_opensource_crosvm-gunyah

./: Android.bp  Cargo.toml
mmio/: Android.bp  Cargo.toml
mmio/src/: lib.rs
qvirtservice/: Android_bp  vendor.qti.qvirt-service.rc  vendor.qti.qvirt-service.xml  vendor.qti.qvirt-service_rs.rc
qvirtservice/rs_src/: main.rs  utils.rs  virtual_machine.rs  virtualization_service.rs
qvirtservice/rs_src/bindgen/: uevent.h
qvirtservice/src/: VirtualMachine.cpp  VirtualMachine.h  VirtualizationService.cpp  VirtualizationService.h  main.cpp
qvirtservice/test_client/: Android.bp  test_client.rs
src/: main.rs
